; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/arch/gc/netif/extr_gcif.c___bba_start_tx.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwip/arch/gc/netif/extr_gcif.c___bba_start_tx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netif = type { i32 }
%struct.pbuf = type { i32 }
%struct.ip_addr = type { i32 }

@NETIF_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"__bba_start_tx(%p)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.netif*, %struct.pbuf*, %struct.ip_addr*)* @__bba_start_tx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__bba_start_tx(%struct.netif* %0, %struct.pbuf* %1, %struct.ip_addr* %2) #0 {
  %4 = alloca %struct.netif*, align 8
  %5 = alloca %struct.pbuf*, align 8
  %6 = alloca %struct.ip_addr*, align 8
  store %struct.netif* %0, %struct.netif** %4, align 8
  store %struct.pbuf* %1, %struct.pbuf** %5, align 8
  store %struct.ip_addr* %2, %struct.ip_addr** %6, align 8
  %7 = load i32, i32* @NETIF_DEBUG, align 4
  %8 = call i32 (...) @LWP_GetSelf()
  %9 = sext i32 %8 to i64
  %10 = inttoptr i64 %9 to i8*
  %11 = call i32 @LWIP_DEBUGF(i32 %7, i8* %10)
  %12 = load %struct.netif*, %struct.netif** %4, align 8
  %13 = load %struct.ip_addr*, %struct.ip_addr** %6, align 8
  %14 = load %struct.pbuf*, %struct.pbuf** %5, align 8
  %15 = call i32 @etharp_output(%struct.netif* %12, %struct.ip_addr* %13, %struct.pbuf* %14)
  ret i32 %15
}

declare dso_local i32 @LWIP_DEBUGF(i32, i8*) #1

declare dso_local i32 @LWP_GetSelf(...) #1

declare dso_local i32 @etharp_output(%struct.netif*, %struct.ip_addr*, %struct.pbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
